--- a/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -19,11 +19,11 @@
 }
 
 .Open {
-    transform: translateX(0)
+    transform: translateX(0);
 }
 
 .Close {
-    transform: translateX(-100%)
+    transform: translateX(-100%);
 }
 
 .Logo {
